--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-alert-notification": "^0.4.0",
     "react-native-webview": "^13.8.1"
   },
   "devDependencies": {
